tests/Fail/test9.cm
int main ()
{
	int y;

	int void(int z)
	{
		z = z + 1;
		return z;
	}
	return y;
}